--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" href="js/lib/jquery-ui/css/smoothness/jquery-ui-1.9.1.custom.css" />
 <link rel="stylesheet" href="js/lib/jquery-ui/addons/jquery-ui-timepicker.css" />
-<link rel="stylesheet" href="//cdn.jsdelivr.net/leaflet/0.7.3/leaflet.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.css" />
 <link rel="stylesheet" href="js/otp/widgets/widget-style.css?v=1" />
 <link rel="stylesheet" href="js/otp/modules/planner/planner-style.css?v=1" />
 <link rel="stylesheet" href="js/otp/modules/bikeshare/bikeshare-style.css?v=1" />
@@ -29,13 +29,13 @@
 <link rel="stylesheet" href="style.css?v=1" />
 
 <!--Loads jquery, underscore, json2, momentjs and raphael makes 7 requests less-->
-<script src="//cdn.jsdelivr.net/g/jquery@1.9.1,underscorejs@1.4.2,json2@0.1,momentjs@1.7.2,raphael@2.1.2"></script>
+<script src="https://cdn.jsdelivr.net/g/jquery@1.9.1,underscorejs@1.4.2,json2@0.1,momentjs@1.7.2,raphael@2.1.2"></script>
 
 <!--
 leaflet cannot be loaded with other scripts. it breaks the L.Icon.Default.imagePath regular expression
 Analyst's webinterface was broken by that
 -->
-<script src="//cdn.jsdelivr.net/leaflet/0.7.3/leaflet.js"></script>
+<script src="https://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.js"></script>
 
 <!-- jquery-ui -->
 <script src="js/lib/jquery-ui/js/jquery-ui-1.9.1.custom.min.js"></script>
@@ -54,7 +54,7 @@ Analyst's webinterface was broken by that
 <script src="js/lib/backbone.js"></script>
 
 <!-- Mustache/ICanHaz -->
-<script src="//cdn.jsdelivr.net/mustache.js/0.7.2/mustache.js"></script>
+<script src="https://cdn.jsdelivr.net/mustache.js/0.7.2/mustache.js"></script>
 <script src="js/lib/ICanHaz.js"></script>
 
 
@@ -201,8 +201,8 @@ Analyst's webinterface was broken by that
 
 <!-- make legacy Internet Explorer play nice(r) -->
 <!--[if lt IE 9]>
-  <script src="//cdn.jsdelivr.net/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="//cdn.jsdelivr.net/respond/0.1/respond.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://cdn.jsdelivr.net/respond/0.1/respond.min.js"></script>
 <![endif]-->
 
 
