--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,7 +14,9 @@
 
 <link rel="stylesheet" href="js/lib/jquery-ui/css/smoothness/jquery-ui-1.9.1.custom.css" />
 <link rel="stylesheet" href="js/lib/jquery-ui/addons/jquery-ui-timepicker.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.css" />
+
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.css" />-->
 <link rel="stylesheet" href="js/otp/widgets/widget-style.css?v=1" />
 <link rel="stylesheet" href="js/otp/modules/planner/planner-style.css?v=1" />
 <link rel="stylesheet" href="js/otp/modules/bikeshare/bikeshare-style.css?v=1" />
@@ -35,8 +37,10 @@
 leaflet cannot be loaded with other scripts. it breaks the L.Icon.Default.imagePath regular expression
 Analyst's webinterface was broken by that
 -->
-<script src="https://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.js"></script>
-
+<!--<script src="https://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.js"></script>-->
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+   crossorigin=""></script>
 <!-- jquery-ui -->
 <script src="js/lib/jquery-ui/js/jquery-ui-1.9.1.custom.min.js"></script>
 <script src="js/lib/jquery-ui/addons/jquery-ui-timepicker.js"></script>
