--- a/src/client/index.html
+++ b/src/client/index.html
@@ -29,6 +29,7 @@
 <link rel="stylesheet" href="js/otp/widgets/tripoptions/tripoptions-style.css?v=1" />
 <link rel="stylesheet" href="js/otp/widgets/transit/widgets-transit-style.css?v=1" />
 <link rel="stylesheet" href="style.css?v=1" />
+<link href='https://css.gg/home-alt.css' rel='stylesheet'>
 
 <!--Loads jquery, underscore, json2, momentjs and raphael makes 7 requests less-->
 <script src="https://cdn.jsdelivr.net/g/jquery@1.9.1,underscorejs@1.4.2,json2@0.1,momentjs@1.7.2,raphael@2.1.2"></script>
