--- a/src/client/index.html
+++ b/src/client/index.html
@@ -275,7 +275,7 @@ $(document).ready(function() {
 <div id="otp-minimize-tray"></div>
 
 <div id="containsplide">
-	<div class="splide-title" onclick="$( '.splide' ).toggle('slow');">Our Highlights</div>
+	<div class="splide-title" onclick="$( '.splide' ).toggle('slow');">Highlights</div>
 	<div class="splide">
 		<div class="splide__track">
 			<ul class="splide__list">
